quelques modifications ajoutées